@@ -1,0 +1,36 @@
+/*
+    Copyright (C) 2018 Carl Hetherington <cth@carlh.net>
+
+    This file is part of DCP-o-matic.
+
+    DCP-o-matic is free software; you can redistribute it and/or modify
+    it under the terms of the GNU General Public License as published by
+    the Free Software Foundation; either version 2 of the License, or
+    (at your option) any later version.
+
+    DCP-o-matic is distributed in the hope that it will be useful,
+    but WITHOUT ANY WARRANTY; without even the implied warranty of
+    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+    GNU General Public License for more details.
+
+    You should have received a copy of the GNU General Public License
+    along with DCP-o-matic.  If not, see <http://www.gnu.org/licenses/>.
+
+*/
+
+#include "table_dialog.h"
+
+class PasteDialog : public TableDialog
+{
+public:
+	PasteDialog (wxWindow* parent, bool video, bool audio, bool subtitle);
+
+	bool video () const;
+	bool audio () const;
+	bool subtitle () const;
+
+private:
+	wxCheckBox* _video;
+	wxCheckBox* _audio;
+	wxCheckBox* _subtitle;
+};
